# kvstore

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: rust.yaml
benches/: benchmarks.rs
examples/: dual_server.rs  grpc_server.rs  http_server.rs  library_usage.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: store_fuzz.rs
k8s/: deployment-grpc.yaml  deployment-http.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service-grpc.yaml  service-http.yaml  service.yaml
kvstore-client/: Cargo.toml  build.rs
kvstore-client/src/: lib.rs
proto/: kvstore.proto
src/: error.rs  grpc.rs  http.rs  lib.rs  main.rs  store.rs
tests/: integration_tests.rs
