[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
redis = { version = "0.27.6", features = ["tokio", "r2d2", "connection-manager", "aio", "tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit", "tokio"] }
tower-http = { version = "0.6.2", features = ["add-extension", "auth", "compression-full", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
