[workspace]
members = [".", "kvstore-client", "fuzz"]

[package]
name = "kvstore"
version = "0.2.0"
edition = "2021"
authors = ["KVStore Contributors"]
description = "A lightweight, production-ready Rust library for key-value storage with HTTP and gRPC support, backed by Redis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/kvstore"
keywords = ["kvstore", "redis", "grpc", "http", "api"]
categories = ["web-programming", "api-bindings", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kvstore"
path = "src/lib.rs"

[[bin]]
name = "kvstore"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8.6"
axum-macros = "0.5.0"

# gRPC support
tonic = "0.14.2"
prost = "0.14.1"
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic-prost = "0.14.2"
tonic-reflection = "0.14"

# Redis client
redis = { version = "0.32.7", features = ["connection-manager", "aio", "tokio-comp"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Middleware
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit", "tokio"] }
tower-http = { version = "0.6.6", features = ["add-extension", "auth", "compression-full", "limit", "trace"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
tempfile = "3.23.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
reqwest = { version = "0.12.5", features = ["json"] }
kvstore-client = { path = "kvstore-client" }

[[bench]]
name = "benchmarks"
harness = false
