[package]
name = "kvstore-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
once_cell = "1.19"

[dependencies.kvstore]
path = ".."

[dependencies.tokio]
version = "1"
features = ["full"]

[[bin]]
name = "store_fuzz"
path = "fuzz_targets/store_fuzz.rs"
test = false
doc = false
bench = false
